Some trivial changes to utilize Java 5. Also made Configurable.getSettingNames public.