@@ -131,7 +131,6 @@ public abstract class DefaultArrayAdapter extends WrappingTemplateModel implemen
         }
 
         public TemplateModel get(int index) throws TemplateModelException {
-            // Java 5: Use valueOf
             return index >= 0 && index < array.length ? wrap(Byte.valueOf(array[index])) : null;
         }
 
@@ -155,7 +154,6 @@ public abstract class DefaultArrayAdapter extends WrappingTemplateModel implemen
         }
 
         public TemplateModel get(int index) throws TemplateModelException {
-            // Java 5: Use valueOf
             return index >= 0 && index < array.length ? wrap(Short.valueOf(array[index])) : null;
         }
 
@@ -179,7 +177,6 @@ public abstract class DefaultArrayAdapter extends WrappingTemplateModel implemen
         }
 
         public TemplateModel get(int index) throws TemplateModelException {
-            // Java 5: Integer.valueOf
             return index >= 0 && index < array.length ? wrap(Integer.valueOf(array[index])) : null;
         }
 
@@ -203,7 +200,6 @@ public abstract class DefaultArrayAdapter extends WrappingTemplateModel implemen
         }
 
         public TemplateModel get(int index) throws TemplateModelException {
-            // Java 5: Use valueOf
             return index >= 0 && index < array.length ? wrap(Long.valueOf(array[index])) : null;
         }
 
@@ -227,7 +223,6 @@ public abstract class DefaultArrayAdapter extends WrappingTemplateModel implemen
         }
 
         public TemplateModel get(int index) throws TemplateModelException {
-            // Java 5: Use valueOf
             return index >= 0 && index < array.length ? wrap(Float.valueOf(array[index])) : null;
         }
 
@@ -251,7 +246,6 @@ public abstract class DefaultArrayAdapter extends WrappingTemplateModel implemen
         }
 
         public TemplateModel get(int index) throws TemplateModelException {
-            // Java 5: Use valueOf
             return index >= 0 && index < array.length ? wrap(Double.valueOf(array[index])) : null;
         }
 
@@ -275,7 +269,6 @@ public abstract class DefaultArrayAdapter extends WrappingTemplateModel implemen
         }
 
         public TemplateModel get(int index) throws TemplateModelException {
-            // Java 5: Use valueOf
             return index >= 0 && index < array.length ? wrap(Character.valueOf(array[index])) : null;
         }
 
@@ -299,8 +292,7 @@ public abstract class DefaultArrayAdapter extends WrappingTemplateModel implemen
         }
 
         public TemplateModel get(int index) throws TemplateModelException {
-            // Java 5: Use valueOf
-            return index >= 0 && index < array.length ? wrap(new Boolean(array[index])) : null;
+            return index >= 0 && index < array.length ? wrap(Boolean.valueOf(array[index])) : null;
         }
 
         public int size() throws TemplateModelException {
@@ -328,7 +320,6 @@ public abstract class DefaultArrayAdapter extends WrappingTemplateModel implemen
         }
 
         public TemplateModel get(int index) throws TemplateModelException {
-            // Java 5: Integer.valueOf
             return index >= 0 && index < length ? wrap(Array.get(array, index)) : null;
         }
 
